# Learning-FastAPI

./: .gitignore  application-dev.yaml  application.yaml  compose.yaml  pyproject.toml  test_main.http
.run/: learningFastApi.run.xml
src/: config.py  deps.py  main.py
src/core-ai/: hello_world_langgraph.py
src/core_ai/: hello_world_langgraph.py
src/http_server/openai/: router.py  schema.py
