[project]
name = "learningfastapi"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "langgraph-store-mongodb>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]
